# otp-service

./: .gitignore  Dockerfile  README.md  app.py  database.py  decorators.py  deploy.sh  psql.sh  pyproject.toml  qr.py
tests/: test_decorators.py  test_qr.py
